<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="#FF03DAC5"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Guide"/>

        <TextView
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="How It works?"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/How"/>

        <TextView
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Step-1"
            android:textStyle="bold"/>

        <TextView
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step1"/>
        <TextView
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Step-2*"
            android:textStyle="bold"/>

        <TextView
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step2"/>

        <TextView
            android:layout_margin="10dp"
            android:textSize="12sp"
            android:background="#DDDADA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step2_about"
            android:textStyle="italic"/>

        <TextView
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Step-3"
            android:textStyle="bold"/>

        <TextView
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step3"/>

        <LinearLayout
            android:layout_margin="10dp"
            android:background="#DDDADA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_margin="10dp"
                android:textSize="12sp"
                android:textStyle="italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beforNote"/>

            <TextView
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Note"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/bullet"
                android:textStyle="italic"
                android:textSize="12sp"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/note"/>

            <TextView
                android:textStyle="italic"
                android:textSize="12sp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/note1"/>


        </LinearLayout>


    </LinearLayout>

</ScrollView>