<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">


        <ImageView
            android:layout_marginRight="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/flag"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Made With"
            android:layout_marginBottom="20dp"/>

        <ImageView
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_favorite_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="In India"/>

        <ImageView
            android:layout_marginLeft="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/flag"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clipToPadding="false"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:id="@+id/Sos"
                android:layout_width="140dp"
                android:layout_height="120dp"
                android:layout_margin="20dp"
                app:cardCornerRadius="5dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/card_background">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_contacts_24"
                        app:tint="#319ACA" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sos"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/add_contacts"
                android:layout_width="140dp"
                android:layout_height="120dp"
                android:layout_margin="20dp"
                app:cardCornerRadius="5dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/card_background">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/iadd_contacts"
                        app:tint="#1BCDBD" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:id="@+id/map"
                android:layout_width="140dp"
                android:layout_height="120dp"
                android:layout_margin="20dp"
                app:cardCornerRadius="5dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/card_background">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_record_voice_over_24"
                        app:tint="#26D12D" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/show_location"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/settings"
                android:layout_width="140dp"
                android:layout_height="120dp"
                android:layout_margin="20dp"
                app:cardCornerRadius="5dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/card_background">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/profile"
                        app:tint="#0C63A8" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/your_account"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>


    </LinearLayout>

</RelativeLayout>